changement de la classe charges + changement de la table pour les getters